--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,26 +1,31 @@
-- provide(:title, 'Профіль')
+- provide(:title, 'My profile')
 .container.content-area
   .intro-header
     .intro-message
-      h2 Редагувати профіль
+      h2 Edit profile
       br
       .form.col-md-4.col-md-offset-4
         = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
           = devise_error_messages!
+          = f.label :first_name, 'First name'
           = f.text_field :first_name, autofocus: true, placeholder: "First name", class: "form-control"
-          = f.text_field :last_name, autofocus: true, placeholder: "Last name", class: "form-control"
-          = f.text_field :login, autofocus: true, placeholder: "Login", class: "form-control"
-          = f.email_field :email, autofocus: true, placeholder: "Email", class: "form-control"
-          i 
-            | (залишіть поля пустими, якщо не хочете змінювати пароль)
+          = f.label :last_name, 'Last name'
+          = f.text_field :last_name, placeholder: "Last name", class: "form-control"
+          = f.label :login, 'Login'
+          = f.text_field :login, placeholder: "Login", class: "form-control"
+          = f.label :email, 'Email'
+          = f.email_field :email, placeholder: "Email", class: "form-control"
           br
-          = f.password_field :password, autocomplete: "off", placeholder: "Новий пароль: 8 символів мінімум", class: "form-control"
-          = f.password_field :password_confirmation, autocomplete: "off", placeholder: "Повторіть новий пароль", class: "form-control"
+          = f.password_field :password, placeholder: "New password: 8 characters minimum", class: "form-control"
+          = f.password_field :password_confirmation, placeholder: "Repeat new password", class: "form-control"
           br
-          = f.password_field :current_password, autocomplete: "off", placeholder: "Ваш пароль, щоб підтвердити зміни", class: "form-control"
+          = f.password_field :current_password, placeholder: "Enter your password to confirm changes", class: "form-control"
+          br
+          = f.label :avatar, 'Select avatar'
+          = f.file_field :avatar
           br
           .actions.row
-            = f.submit "Редагувати", class: "btn btn-md btn-success col-xs-6 col-xs-offset-3"
+            = f.submit "Edit", class: "btn btn-md btn-success col-xs-6 col-xs-offset-3"
         br
-        //= link_to "Back", :back
+        = link_to "Back", :back
         br
